# vita-presence-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: discord.rs  images.rs  main.rs  vita.rs
