[package]
name = "vita-presence-rs"
version = "0.1.0"
edition = "2024"
description = "Client for the VitaPresence PS Vita Plugin by Electry"
repository = "https://github.com/krypt0graphy/vita-presence-rs"
license = "GPL-3.0-or-later"
keywords = ["discord", "rich-presence", "vita", "psvita", "playstation"]


[dependencies]
ctrlc = "3.5.2"
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
env_logger = "0.11.10"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zerocopy = { version = "0.8.48", features = ["derive"] }
